--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,9 @@
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
+
+# Ignore
+Water4Advanced.mat
+UnityVS.VersionSpecific.dll
+UnityVS.VersionSpecific.dll.meta
+ProjectSettings.asset
