--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,9 @@
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
 
-# Ignore
+# Ignore Unity and VS
 Water4Advanced.mat
 UnityVS.VersionSpecific.dll
 UnityVS.VersionSpecific.dll.meta
 ProjectSettings.asset
+ProjectVersion.txt
