--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,10 @@
 sysinfo.txt
 
 # Ignore Unity and VS
-Water4Advanced.mat
-UnityVS.VersionSpecific.dll
-UnityVS.VersionSpecific.dll.meta
-ProjectSettings.asset
-ProjectVersion.txt
+PSMG_SS_2015_Shootergame/ProjectSettings/ProjectVersion.txt
+PSMG_SS_2015_Shootergame/ProjectSettings/ProjectSettings.asset
+PSMG_SS_2015_Shootergame/Assets/UnityVS/Editor/UnityVS.VersionSpecific.dll
+PSMG_SS_2015_Shootergame/Assets/UnityVS/Editor/UnityVS.VersionSpecific.dll.meta
+PSMG_SS_2015_Shootergame/Assets/Standard Assets/Environment/Water/Water4/Materials/Water4Advanced.mat
+
+
