--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,10 @@
 sysinfo.txt
 
 # Ignore Unity and VS
-PSMG_SS_2015_Shootergame/ProjectSettings/ProjectVersion.txt
-PSMG_SS_2015_Shootergame/ProjectSettings/ProjectSettings.asset
-PSMG_SS_2015_Shootergame/Assets/UnityVS/Editor/UnityVS.VersionSpecific.dll
-PSMG_SS_2015_Shootergame/Assets/UnityVS/Editor/UnityVS.VersionSpecific.dll.meta
-PSMG_SS_2015_Shootergame/Assets/Standard Assets/Environment/Water/Water4/Materials/Water4Advanced.mat
+./PSMG_SS_2015_Shootergame/ProjectSettings/ProjectVersion.txt
+./PSMG_SS_2015_Shootergame/ProjectSettings/ProjectSettings.asset
+./PSMG_SS_2015_Shootergame/Assets/UnityVS/Editor/UnityVS.VersionSpecific.dll
+./PSMG_SS_2015_Shootergame/Assets/UnityVS/Editor/UnityVS.VersionSpecific.dll.meta
+./PSMG_SS_2015_Shootergame/Assets/Standard Assets/Environment/Water/Water4/Materials/Water4Advanced.mat
 
 
